--- a/homework2cs4300/djangotutorial/bookings/templates/bookings/movie_list.html
+++ b/homework2cs4300/djangotutorial/bookings/templates/bookings/movie_list.html
@@ -1,14 +1,18 @@
-{% extends ’ bookings / base . html ’ %}
-{% block title %} Movie List {% endblock %}
+{% extends "bookings/base.html" %}
+
+{% block title %}Movie List{% endblock %}
+
 {% block content %}
-<h2 > Available Movies </h2 >
-<ul class ="list - group ">
+<h2>Available Movies</h2>
+<ul class="list-group">
     {% for movie in movies %}
-        <li class ="list -group - item ">
-        <h5 >{{ movie . title }} </h5 >
-        <p>{{ movie . description }} </p>
-        <a href ="{% url ’book_seat ’ movie .id %}" class ="btn btn - primary "> Book Now </a>
-    </li >
+        <li class="list-group-item">
+            <h5>{{ movie.title }}</h5>
+            <p>{{ movie.description }}</p>
+            <a href="{% url 'book_seat' movie.id %}" class="btn btn-primary">Book Now</a>
+        </li>
+    {% empty %}
+        <li class="list-group-item">No movies available</li>
     {% endfor %}
-</ul >
+</ul>
 {% endblock %}
